# db-autofill

./: .gitignore  README.md  autofill.spec  pyproject.toml  requirements.txt  setup.py
docs/: README.md
examples/: config.json
src/: __init__.py  autofill.py  config.py  data_generator.py  database_inserter.py  dependency_analyzer.py  schema_parser.py
